--- a/Frontend/ShoppingList.Frontend.WebApp/wwwroot/css/general/general.css
+++ b/Frontend/ShoppingList.Frontend.WebApp/wwwroot/css/general/general.css
@@ -1,56 +1,66 @@
 ﻿.nav-link {
-  color: #34495e;
+    color: #34495e;
 }
+
 @media (min-width: 769px) {
-  .nav-link {
-    font-size: 1.2rem;
-    padding: 6px 4px;
-  }
-  .nav-link:hover,
-  .nav-link-ext:hover {
-    color: #ffffff;
-  }
-  .ant-modal-wrap {
-    margin-left: 181.5px;
-  }
+    .nav-link {
+        font-size: 1.2rem;
+        padding: 6px 4px;
+    }
+
+        .nav-link:hover,
+        .nav-link-ext:hover {
+            color: #ffffff;
+        }
+
+    .ant-modal-wrap {
+        margin-left: 181.5px;
+    }
 }
+
 @media (max-width: 768px) {
-  .nav-link {
-    padding: 0;
-    flex-direction: column;
-  }
+    .nav-link {
+        padding: 0;
+        flex-direction: column;
+    }
 }
+
 .item-editing .remove-item {
-  border-color: #ecf0f1;
+    border-color: #ecf0f1;
 }
+
 .item-editing .quantity-input {
-  width: 70px;
+    width: 70px;
 }
+
 .ant-select-multiple span.ant-select-selection-item {
-  background-color: #3498db;
-  color: #ffffff;
-  border-radius: 5px;
+    background-color: #3498db;
+    color: #ffffff;
+    border-radius: 5px;
 }
 /* shopping list */
 .ant-input-number.price-update-input {
-  width: 95px;
+    width: 95px;
 }
+
 .shopping-list-summary-finish-time-editing {
-  color: #27ae60;
+    color: #27ae60;
 }
 /* item editor */
 .item-editor .in-packet-input {
-  max-width: 60px;
+    width: 60px;
 }
 /* recipes */
 .recipes .recipe-search-tabs {
-  width: 100%;
+    width: 100%;
 }
+
 .editor-number-of-servings .editor-number-of-servings-input {
-  width: 55px;
+    width: 55px;
 }
+
 hr {
-  margin: 10px 0 10px 0;
-  background-color: #3498db;
-  opacity: 0.5;
+    margin: 10px 0 10px 0;
+    background-color: #3498db;
+    opacity: 0.5;
 }
